# src/privateRoutes.ts
@@ -1,15 +1,13 @@
 import express, { NextFunction, Response, Request } from "express"
 import { verify } from 'jsonwebtoken'
 import { config } from "../config";
-import { createMentorProfile, deleteMentorProfile, updateMentorProfile } from "./controllers/profileControllers/mentorProfileControllers";
-import { createStudentProfile, deleteStudentProfile, updateStudentProfile } from "./controllers/profileControllers/studentProfileControllers";
-import { createProject, deleteProject } from "./controllers/projectControllers";
-import { curatorControllers } from "./controllers/curatorControllers/controllers";
+import { adminControllers } from "./controllers/adminControllers/controllers";
 import { studentControllers } from "./controllers/studentControllers/controllers";
 
 let router = express.Router()
 
 function authorization(req: Request, res: Response, next: NextFunction) {
+    
     const token = req.headers.authorization || req.body.authorization;
     if (token) {
         const verified = verify(token, config.secretKey)
@@ -32,8 +30,7 @@ function authorization(req: Request, res: Response, next: NextFunction) {
 
 router.use(authorization)
 
-router.use('/curator', curatorControllers)
-
+router.use('/admin', adminControllers)
 router.use('/student', studentControllers)
 
 
