# src/publicRoutes.ts
@@ -1,6 +1,7 @@
 import express from "express"
 import { signIn, signUp } from "./controllers/userControllers";
-import { getAcademicAreas } from "./controllers/curatorControllers/curatorUtils";
+import { getAcademicAreas } from "./controllers/adminControllers/curatorUtils";
+import { courses } from "./controllers/courseControllers";
 
 let router = express.Router()
 
@@ -8,5 +9,6 @@ router.post('/sign-up', signUp)
 router.post('/sign-in', signIn)
 
 router.get('/academicAreas', getAcademicAreas)
+router.get('/courses', courses)
 
 export const publicRoutes = router;
